--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,6 @@
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<form action="/aurl" method="post">
+  Enter URL of YouTuber:
+  <input type="text" name="url">
+  <input type="submit" value="Submit">
+</form>
