--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <h1>{{title}}</h1>
 <form action="/aurl" method="post">
-  Enter URL of YouTuber:
-  <input type="text" name="url">
-  <input type="submit" value="Submit">
+  <p>Enter text:<br/>
+  <textarea style="font-family:calibri" type="text" name="aurl" cols="55" rows="7"></textarea><br/>
+  <input type="submit" value="Submit"></p>
 </form>
