--- a/views/aurl.hbs
+++ b/views/aurl.hbs
@@ -15,7 +15,7 @@ Number of words in sentences
 window.onload = function () {
 	var chart = new CanvasJS.Chart("chartContainer", {
 		title:{
-			text: {{{nos}}}           
+			text: "Distribution of Words per Sentence"           
 		},
 		data: [              
 		{
