--- a/views/aurl.hbs
+++ b/views/aurl.hbs
@@ -2,14 +2,9 @@
 
 <h3>Number of Sentences : {{nos}}</h3>
 
-Number of words in sentences
-<ol>
-{{#each wordarr}}
-  <li>{{ this }}</li>
-{{/each}}
-</ol>
 
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+<script src="../routes/index.js"></script>
 <script type="text/javascript">
 
 window.onload = function () {
@@ -17,21 +12,43 @@ window.onload = function () {
 		title:{
 			text: "Distribution of Words per Sentence"           
 		},
-		data: [              
-		{
-			// Change type to "doughnut", "line", "splineArea", etc.
-			type: "column",
-			dataPoints: [
-				{ label: "apple",  y: 10  },
-				{ label: "orange", y: 15  },
-				{ label: "banana", y: 25  },
-				{ label: "mango",  y: 30  },
-				{ label: "grape",  y: 28  }
-			]
-		}
-		]
+		axisY:{
+        interval: 1
+      },
+	  axisX:{
+       interval: 1
+     },
+		data: data, 
+		
 	});
 	chart.render();
 }
+
+var limit = {{{nos}}};    //increase number of dataPoints by increasing this
+   
+    var y = 0;
+    var data = []; var dataSeries = { type: "column" };
+    var dataPoints = [];
+    for (var i = 0; i < limit; i += 1) {
+        y = {{wordarr.[1]}};
+         dataPoints.push({
+          x: i + 1 ,
+          y: y                
+           });
+        }
+     dataSeries.dataPoints = dataPoints;
+     data.push(dataSeries);     
+
+
+
+
+
 </script>
 <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+
+Number of words in sentences
+<ol>
+{{#each wordarr}}
+  <li>{{this}}</li>
+{{/each}}
+</ol>
