--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <h1>{{title}}</h1>
-<form action="/aurl" method="post">
+<form class="box" action="/aurl" method="post">
   <p>Paste some or maybe lots of text (eg. a wikipedia article) and we will analyze it for you in form of cool graphs:<br/>
-  <textarea style="font-family:calibri" type="text" name="textdata" rows="10" cols="100"></textarea><br/>
-  <input type="submit" value="Submit"></p>
+  <textarea style="font-family:calibri" type="text" name="textdata" rows="10" cols="150"></textarea><br/>
+  <input class= "button" type="submit" value="Submit"></p>
 </form>
