--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,9 +2,15 @@
 <html>
   <head>
     <title>{{title}}</title>
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    {{{body}}}
+    <section class="section">
+      <div class="content">
+        {{{body}}}
+      </div>
+    </section>
   </body>
 </html>
