changes in usability

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,5 @@
-<h1>{{title}}</h1>
+
+<h1 class="title is-1">{{title}}</h1>
 <form class="box" action="/aurl" method="post">
   <p>Paste some or maybe lots of text (eg. a wikipedia article) and we will analyze it for you in form of cool graphs:<br/>
   <textarea style="font-family:calibri" type="text" name="textdata" rows="10" cols="150"></textarea><br/>
