--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,6 @@ a {
 }*/
 
 body {
-    background-image: url(".\images/words.jpg");
+    background-image: url("../images/paper.jpg");
     background-color: #cccccc;
 }
