--- a/views/aurl.hbs
+++ b/views/aurl.hbs
@@ -44,10 +44,38 @@ Frequency of words in sentences
 
 
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-<script src="\routes/index.js"></script>
+
 <script type="text/javascript">
 
 window.onload = function () {
+
+	var array;
+   console.log({{wordarr}});
+   array={{wordarr}};
+   var testa = "{{wordarr}}"
+   console.log(testa);
+   array = testa;
+   console.log(array);
+   {{log array}}
+    var data = []; var dataSeries = { type: "column" };
+    var dataPoints = [];
+	var index=0;
+
+    for (var i = 0; i < {{{nos}}}; i += 1) {
+		console.log(i);
+		console.log(array[i]);
+		var y= array[i];
+         dataPoints.push({
+          x: i + 1 ,
+          y: y                
+           });
+		   index++;
+        }
+     dataSeries.dataPoints = dataPoints;
+     data.push(dataSeries);   
+	
+	
+	
 	var chart = new CanvasJS.Chart("chartContainer", {
 		title:{
 			text: "Distribution of Words per Sentence"           
@@ -65,22 +93,7 @@ window.onload = function () {
 }
    
    
-   var array={{wordarr}};
-    var data = []; var dataSeries = { type: "column" };
-    var dataPoints = [];
-	var index=0;
-    for (var i = 0; i < {{{nos}}}; i += 1) {
-	{{log}} array
-	
-		var y= array[i];
-         dataPoints.push({
-          x: i + 1 ,
-          y: y                
-           });
-		   index++;
-        }
-     dataSeries.dataPoints = dataPoints;
-     data.push(dataSeries);     
+   
 
 
 
