--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 
 <h1 class="title is-1">{{title}}</h1>
-<form class="box" action="/aurl" method="post">
+<form class="box" action="/ajax/test" method="post">
   <p>Paste some or maybe lots of text (eg. a wikipedia article) and we will analyze it for you in form of cool graphs:<br/>
-  <textarea style="font-family:calibri" type="text" name="textdata" rows="10" cols="150"></textarea><br/>
-  <input class= "button" type="submit" value="Submit"></p>
+  <textarea id="tt" style="font-family:calibri" type="text" name="textdata" rows="10" cols="100"></textarea><br/>
+  <button class= "button" id="btn">Submit</button></p>
 </form>
