--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,6 +12,9 @@
         {{{body}}}
       </div>
     </section>
+	
+	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+	
 
   </body>
 </html>
