--- a/views/aurl.hbs
+++ b/views/aurl.hbs
@@ -25,5 +25,6 @@ Frequency of words in sentences
 
 
 <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+<div id="chartContainers" style="height: 300px; width: 100%;"></div>
 
 
