--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,7 @@
       </div>
     </section>
 	
-	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 	
 
   </body>
