--- a/views/aurl.hbs
+++ b/views/aurl.hbs
@@ -20,7 +20,7 @@ Frequency of words in sentences
 </ol>
 </p>
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="/javascripts/output.js"></script>
 
 
